--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,11 +11,11 @@ $yase-yellow: #fbf3dc;
 
 #map-icon {
   position: absolute;
-  left: 5px; /* Adjust as needed to position the icon */
+  left: 5px;
   top: 50%;
   transform: translateY(-50%);
-  width: 25px; /* Adjust the size of the icon as needed */
-  height: auto; /* Maintain aspect ratio */
+  width: 25px;
+  height: auto;
 }
 
 #valuation-icon {
@@ -43,10 +43,10 @@ $yase-yellow: #fbf3dc;
 }
 
 input {
-  margin: 0;
-  padding: 0;
   display: flex;
   flex: 1;
+  margin: 0;
+  padding: 0;
   padding-left: 30px;
   padding: 1rem;
   padding-left: 2rem;
@@ -59,6 +59,7 @@ input {
 
 #button1 {
   padding: 1rem;
+  font-weight: 700;
   background-color: $yase-purple;
   color: white;
   border: none;
