--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,8 +8,9 @@ $yase-purple: #a4a4eb;
 $border-colour: #353535;
 $shadow-colour: #a09f9f;
 $yase-yellow: #fbf3dc;
+$input-colour: #636363;
 
-#map-icon {
+.input-icons {
   position: absolute;
   left: 5px;
   top: 50%;
@@ -28,7 +29,7 @@ $yase-yellow: #fbf3dc;
   outline: 1px solid $border-colour;
   display: flex;
   flex-direction: column;
-  width: 40%;
+  //   width: 40%;
   gap: 1rem;
   padding: 2rem;
   border-radius: 10px;
@@ -46,10 +47,7 @@ input {
   display: flex;
   flex: 1;
   margin: 0;
-  padding: 0;
-  padding-left: 30px;
-  padding: 1rem;
-  padding-left: 2rem;
+  padding: 1rem 1rem 1rem 2rem;
   border: none;
   outline: 1px solid $border-colour;
   &:focus {
@@ -68,3 +66,74 @@ input {
     cursor: pointer;
   }
 }
+
+.button-container {
+  display: flex;
+  gap: 1rem;
+
+  > button {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    padding: 1rem;
+    font-weight: 700;
+    background-color: lighten($yase-purple, 10%);
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  > button.selected {
+    background-color: $yase-purple;
+    outline: 1px solid $border-colour;
+  }
+  > button:not(.selected):hover {
+    background-color: $yase-purple;
+    outline: 1px solid $border-colour;
+  }
+}
+
+.row-input-container {
+  display: flex;
+  gap: 1rem;
+  flex-direction: row;
+  > div {
+    display: flex;
+    flex: 1;
+    select {
+      outline: 1px solid $border-colour;
+      border: none;
+      display: flex;
+      flex: 1;
+      padding: 1rem;
+      box-sizing: border-box;
+      text-overflow: clip;
+      width: 100%;
+    }
+  }
+}
+
+.square-input {
+  padding-left: 1rem;
+}
+
+select,
+input::placeholder {
+  color: $input-colour;
+}
+
+.finish {
+  display: flex;
+  flex: 1;
+  margin: 0;
+  padding: 1rem 1rem 1rem 1rem;
+  border: none;
+  outline: 1px solid $border-colour;
+  &:focus {
+    outline: 1px solid $yase-purple;
+  }
+}
+
+// .selected {
+//   outline: 1px solid black;
+//   background-color: $yase-purple;
+// }
