--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,6 +50,7 @@ input {
   padding: 1rem 1rem 1rem 2rem;
   border: none;
   outline: 1px solid $border-colour;
+  color: $input-colour;
   &:focus {
     outline: 1px solid $yase-purple;
   }
@@ -121,7 +122,7 @@ input::placeholder {
   color: $input-colour;
 }
 
-.finish {
+#finish-input {
   display: flex;
   flex: 1;
   margin: 0;
@@ -132,8 +133,3 @@ input::placeholder {
     outline: 1px solid $yase-purple;
   }
 }
-
-// .selected {
-//   outline: 1px solid black;
-//   background-color: $yase-purple;
-// }
