added UI for third page, need to add error hadling and submission of data

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -113,7 +113,11 @@ input {
   }
 }
 
-.square-input {
+#square-input,
+#first-name-input,
+#second-name-input,
+#email-input,
+#number-input {
   padding-left: 1rem;
 }
 
