--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,24 +34,39 @@ p {
   max-height: 100px;
 }
 
-.container {
+#london-banner {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-top-left-radius: 10px; /* Apply border radius to top-left corner */
+  border-top-right-radius: 10px;
+}
+
+.widget-container {
   margin: 2rem;
   outline: 5px solid $border-colour;
-  display: flex;
-  flex-direction: column;
-  //   width: 40%;
   min-width: 200px;
-  gap: 1rem;
-  padding: 2rem;
   border-radius: 10px;
   box-shadow: $shadow-colour 0px 7px 29px 0px;
   background-color: $yase-purple;
+  width: 40%;
+}
+
+.container {
+  outline: 5px solid white;
+  border-bottom-left-radius: 10px; /* Apply border radius to top-left corner */
+  border-bottom-right-radius: 10px;
+  display: flex;
+  flex-direction: column;
   background-image: linear-gradient(
-    to top,
+    to bottom,
     $yase-purple,
-    darken($yase-purple, 5%)
+    darken($yase-purple, 10%)
   );
-  color: white; /* Ensure text is readable over the gradient background */
+  gap: 1rem;
+  padding: 1rem 2rem 2rem 2rem;
+  z-index: -1;
   > .top,
   .postcode-container {
     display: flex;
@@ -63,6 +78,8 @@ p {
 
 input,
 select {
+  outline: 1px solid darken($yase-purple, 5%);
+  border-radius: 5px;
   box-shadow: rgba(255, 255, 255, 0.257) 0px 30px 60px -12px inset,
     rgb(255, 254, 254, 0.257) 0px 18px 36px -18px inset;
   background-color: $yase-purple;
@@ -158,7 +175,7 @@ input::placeholder {
   align-items: center;
   appearance: none;
   background-color: $border-colour;
-  border-radius: 4px;
+  border-radius: 10px;
   border-width: 0;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
     rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
