--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ $border-colour: #ffffff;
 $shadow-colour: #000000;
 $input-colour: #ffffff;
 $faded-colour: #ffffffbd;
+$yase-yellow: #fef3dd;
 
 h1,
 h2 {
@@ -95,6 +96,9 @@ h1 {
   gap: 1rem;
   padding: 1rem 2rem 2rem 2rem;
   z-index: -1;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+  //adjust time in clearWidget function
   > .top,
   .postcode-container {
     display: flex;
@@ -234,6 +238,38 @@ input::placeholder {
   border-bottom: solid 0.5px rgba(255, 255, 255, 0.594);
   > p {
     color: $input-colour;
+  }
+}
+
+.loader {
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader--hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.loader::after {
+  content: "";
+  width: 75px;
+  height: 75px;
+  border: 15px solid white;
+  border-top-color: $yase-purple;
+  border-radius: 50%;
+  animation: loading 1s ease infinite;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0turn);
+  }
+  to {
+    transform: rotate(1turn);
   }
 }
 
