changed privacy policy link to open in new tab

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -157,6 +157,7 @@ input::placeholder {
     color: white;
     border: none;
     cursor: pointer;
+    border-radius: 20px;
   }
   > button.selected {
     background-color: lighten($yase-purple, 10%);
