changed endpoint for send to server

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -78,7 +78,7 @@ p {
   border-radius: 10px;
   box-shadow: $shadow-colour 0px 7px 29px 0px;
   background-color: $yase-purple;
-  width: 40%;
+  // width: 40%;
 }
 
 .container {
