added border radius

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,6 +59,7 @@ p {
 
 .widget-container {
   margin: 1rem;
+  border-radius: 25px;
   outline: 1px solid $yase-brown;
   min-width: 320px;
   padding: 1rem 2rem 2rem;
